fixes bug with expand/collapse all, improves swipe left/right

--- a/public/css/input.scss
+++ b/public/css/input.scss
@@ -127,9 +127,7 @@ body {
 .modal-links {
   position: absolute;
   z-index: 2;
-  width: 100%;
   top: 10px;
-  right: 10px;
 
   a {
     padding: 0.2rem 2rem;
@@ -137,6 +135,14 @@ body {
     color: $primary-color;
     border: 4px solid $primary-color;
   }
+}
+
+.left-btn {
+  left: 10px;
+}
+
+.right-btn {
+  right: 10px;
 }
 
 .split-btn {
@@ -464,6 +470,18 @@ a.btn-success {
     display: flex;
     align-items: center;
     justify-content: space-between;
+  }
+
+  .modal-links {
+    top: 20px;
+  }
+
+  .left-btn {
+    left: 20px;
+  }
+
+  .right-btn {
+    right: 20px;
   }
 
 }
