--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -94,14 +94,18 @@ body {
 .modal-links {
   position: absolute;
   z-index: 2;
-  width: 100%;
-  top: 10px;
-  right: 10px; }
+  top: 10px; }
   .modal-links a {
     padding: 0.2rem 2rem;
     background: #FFF;
     color: #CF5C36;
     border: 4px solid #CF5C36; }
+
+.left-btn {
+  left: 10px; }
+
+.right-btn {
+  right: 10px; }
 
 .split-btn {
   width: 49%;
@@ -329,6 +333,15 @@ a.btn-success {
   .instructions {
     display: flex;
     align-items: center;
-    justify-content: space-between; } }
+    justify-content: space-between; }
+
+  .modal-links {
+    top: 20px; }
+
+  .left-btn {
+    left: 20px; }
+
+  .right-btn {
+    right: 20px; } }
 
 /*# sourceMappingURL=styles.css.map */
